--- a/7a -test - Copy/SDLimage.cbp
+++ b/7a -test - Copy/SDLimage.cbp
@@ -33,6 +33,7 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="defs.h" />
+		<Unit filename="game.h" />
 		<Unit filename="graphics.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
