--- a/MyGame/SDLimage.cbp
+++ b/MyGame/SDLimage.cbp
@@ -2,7 +2,7 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="sprite-chim-bai mau" />
+		<Option title="chim-move" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
@@ -34,7 +34,12 @@
 		</Compiler>
 		<Unit filename="defs.h" />
 		<Unit filename="graphics.h" />
+		<Unit filename="input.cpp" />
+		<Unit filename="input.h" />
+		<Unit filename="logic.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="structs.h" />
+		<Unit filename="sync.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
