--- a/MyGame/SDLimage.cbp
+++ b/MyGame/SDLimage.cbp
@@ -32,14 +32,12 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="background.h" />
+		<Unit filename="chim.cpp" />
+		<Unit filename="chim.h" />
 		<Unit filename="defs.h" />
 		<Unit filename="graphics.h" />
-		<Unit filename="input.cpp" />
-		<Unit filename="input.h" />
-		<Unit filename="logic.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="structs.h" />
-		<Unit filename="sync.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
